# yhack-2022

./: .gitignore  README.md
backend/: main.py  package.json  pyproject.toml
backend/db/: main.py  models.py
frontend/: package.json
frontend/src/: constants.js  index.css  index.js
frontend/src/api/: index.js  user.js
frontend/src/pages/App/: App.js  Header.js
frontend/src/pages/Auth/: Login.js  SignUp.js  index.js
frontend/src/pages/Home/: Graph.js  Home.js  Today.js  index.js
frontend/src/pages/Landing/: Landing.js
frontend/src/pages/Misc/: NoMatch.js  index.js
frontend/src/redux/actions/: userActions.js
frontend/src/redux/reducers/: user.js
simulation/: main.py  pyproject.toml  test.py
